--- a/app/pom.xml
+++ b/app/pom.xml
@@ -1,63 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 <modelVersion>4.0.0</modelVersion>
+<parent>
 <groupId>pt.android.double-you</groupId>
 <artifactId>parent</artifactId>
 <version>1.0.0-SNAPSHOT</version>
-<packaging>pom</packaging>
-<name>Double You Parent</name>
+</parent>
+<groupId>pt.android.double-you</groupId>
+<artifactId>app</artifactId>
+<version>1.0.0-SNAPSHOT</version>
+<packaging>apk</packaging>
+<name>Double You App</name>
 
-<dependencyManagement>
 <dependencies>
 <dependency>
 <groupId>com.google.android</groupId>
 <artifactId>android</artifactId>
-<version>1.6_r2</version>
+<scope>provided</scope>
 </dependency>
-<dependency>
-<groupId>com.google.android</groupId>
-<artifactId>android-test</artifactId>
-<version>1.6_r2</version>
-</dependency>
-
 <dependency>
 <groupId>junit</groupId>
 <artifactId>junit</artifactId>
-<version>4.8.2</version>
+<scope>test</scope>
 </dependency>
 </dependencies>
-</dependencyManagement>
 
 <build>
-<pluginManagement>
+<finalName>${project.artifactId}</finalName>
+<sourceDirectory>src</sourceDirectory>
 <plugins>
 <plugin>
 <groupId>com.jayway.maven.plugins.android.generation2</groupId>
 <artifactId>maven-android-plugin</artifactId>
-<version>2.8.3</version>
-<configuration>
-<sdk>
-<platform>4</platform>
-</sdk>
-<emulator>
-<avd>Droid</avd>
-</emulator>
-<deleteConflictingFiles>true</deleteConflictingFiles>
-<undeployBeforeDeploy>true</undeployBeforeDeploy>
-</configuration>
-<extensions>true</extensions>
+<executions>
+<execution>
+<id>startemulator</id>
+<phase>initialize</phase>
+<goals>
+<goal>emulator-start</goal>
+</goals>
+</execution>
+</executions>
 </plugin>
 <plugin>
 <artifactId>maven-compiler-plugin</artifactId>
+<!-- version 2.3 defaults to java 1.5, so no further configuration needed-->
 <version>2.3</version>
 </plugin>
 </plugins>
-
-</pluginManagement>
 </build>
-<modules>
-<module>app</module>
-<module>instrument-tests</module>
-</modules>
-
 </project>
