--- a/instrument-tests/AndroidManifest.xml
+++ b/instrument-tests/AndroidManifest.xml
@@ -3,10 +3,10 @@
       package="com.android.game.DoubleU.test"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:label="Double You Instrument Tests">
 
     <uses-library android:name="android.test.runner" />
     </application>
     <uses-sdk android:minSdkVersion="7" />
-    <instrumentation android:targetPackage="com.android.game.DoubleU" android:name="android.test.InstrumentationTestRunner" />
+    <instrumentation android:targetPackage="com.android.game.DoubleU" android:name="android.test.InstrumentationTestRunner" android:label="Instrument tests for Api Demos"/>
 </manifest> 
